archive/parser/tests/snapshots/statements/valid/0040@7.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE OR REPLACE FUNCTION getfoo() RETURNS text AS $$SELECT name FROM \\\"users\\\" LIMIT 1$$ LANGUAGE sql IMMUTABLE CALLED ON NULL INPUT;"
---
Parse {
    cst: SourceFile@0..135
      CreateFunctionStmt@0..135
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Or@7..9 "OR"
        Whitespace@9..10 " "
        Replace@10..17 "REPLACE"
        Whitespace@17..18 " "
        Function@18..26 "FUNCTION"
        Whitespace@26..27 " "
        Ident@27..33 "getfoo"
        Ascii40@33..34 "("
        Ascii41@34..35 ")"
        Whitespace@35..36 " "
        Returns@36..43 "RETURNS"
        Whitespace@43..44 " "
        TypeName@44..48
          TextP@44..48 "text"
        Whitespace@48..49 " "
        DefElem@49..90
          As@49..51 "AS"
          Whitespace@51..52 " "
          List@52..90
            Sconst@52..90 "$$SELECT name FROM \\\" ..."
        Whitespace@90..91 " "
        DefElem@91..103
          Language@91..99 "LANGUAGE"
          Whitespace@99..100 " "
          SqlP@100..103 "sql"
        Whitespace@103..104 " "
        DefElem@104..113
          Immutable@104..113 "IMMUTABLE"
        Whitespace@113..114 " "
        DefElem@114..120
          Called@114..120 "CALLED"
        Whitespace@120..121 " "
        On@121..123 "ON"
        Whitespace@123..124 " "
        NullP@124..128 "NULL"
        Whitespace@128..129 " "
        InputP@129..134 "INPUT"
        Ascii59@134..135 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateFunctionStmt(
                CreateFunctionStmt {
                    is_procedure: false,
                    replace: true,
                    funcname: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "getfoo",
                                    },
                                ),
                            ),
                        },
                    ],
                    parameters: [],
                    return_type: Some(
                        TypeName {
                            names: [
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "text",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            type_oid: 0,
                            setof: false,
                            pct_type: false,
                            typmods: [],
                            typemod: -1,
                            array_bounds: [],
                            location: 44,
                        },
                    ),
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "as",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    List(
                                                        List {
                                                            items: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "SELECT name FROM \\\"users\\\" LIMIT 1",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 49,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "language",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "sql",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 91,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "volatility",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "immutable",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 104,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "strict",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    Boolean(
                                                        Boolean {
                                                            boolval: false,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 114,
                                    },
                                ),
                            ),
                        },
                    ],
                    sql_body: None,
                },
            ),
            range: 0..134,
        },
    ],
}
