archive/parser/tests/snapshots/statements/valid/0041@2.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE SCHEMA AUTHORIZATION joe;
---
Parse {
    cst: SourceFile@0..32
      CreateSchemaStmt@0..32
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Schema@7..13 "SCHEMA"
        Whitespace@13..14 " "
        Authorization@14..27 "AUTHORIZATION"
        Whitespace@27..28 " "
        RoleSpec@28..31
          Ident@28..31 "joe"
        Ascii59@31..32 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateSchemaStmt(
                CreateSchemaStmt {
                    schemaname: "",
                    authrole: Some(
                        RoleSpec {
                            roletype: RolespecCstring,
                            rolename: "joe",
                            location: 28,
                        },
                    ),
                    schema_elts: [],
                    if_not_exists: false,
                },
            ),
            range: 0..31,
        },
    ],
}
