archive/parser/tests/snapshots/statements/valid/0041@3.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE SCHEMA IF NOT EXISTS test AUTHORIZATION joe;
---
Parse {
    cst: SourceFile@0..51
      CreateSchemaStmt@0..51
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Schema@7..13 "SCHEMA"
        Whitespace@13..14 " "
        IfP@14..16 "IF"
        Whitespace@16..17 " "
        Not@17..20 "NOT"
        Whitespace@20..21 " "
        Exists@21..27 "EXISTS"
        Whitespace@27..28 " "
        Ident@28..32 "test"
        Whitespace@32..33 " "
        Authorization@33..46 "AUTHORIZATION"
        Whitespace@46..47 " "
        RoleSpec@47..50
          Ident@47..50 "joe"
        Ascii59@50..51 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateSchemaStmt(
                CreateSchemaStmt {
                    schemaname: "test",
                    authrole: Some(
                        RoleSpec {
                            roletype: RolespecCstring,
                            rolename: "joe",
                            location: 47,
                        },
                    ),
                    schema_elts: [],
                    if_not_exists: true,
                },
            ),
            range: 0..50,
        },
    ],
}
