archive/parser/tests/snapshots/statements/valid/0042@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE DOMAIN us_postal_code AS TEXT CHECK(VALUE ~ '^\\d{5}$' OR VALUE ~ '^\\d{5}-\\d{4}$');"
---
Parse {
    cst: SourceFile@0..89
      CreateDomainStmt@0..89
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        DomainP@7..13 "DOMAIN"
        Whitespace@13..14 " "
        Ident@14..28 "us_postal_code"
        Whitespace@28..29 " "
        As@29..31 "AS"
        Whitespace@31..32 " "
        TypeName@32..36
          TextP@32..36 "TEXT"
        Whitespace@36..37 " "
        Constraint@37..87
          Check@37..42 "CHECK"
          Ascii40@42..43 "("
          BoolExpr@43..87
            AExpr@43..60
              ColumnRef@43..48
                ValueP@43..48 "VALUE"
              Whitespace@48..49 " "
              Op@49..50 "~"
              Whitespace@50..51 " "
              AConst@51..60
                Sconst@51..60 "'^\\d{5}$'"
            Whitespace@60..61 " "
            Or@61..63 "OR"
            Whitespace@63..64 " "
            AExpr@64..87
              ColumnRef@64..69
                ValueP@64..69 "VALUE"
              Whitespace@69..70 " "
              Op@70..71 "~"
              Whitespace@71..72 " "
              AConst@72..87
                Sconst@72..87 "'^\\d{5}-\\d{4}$'"
        Ascii41@87..88 ")"
        Ascii59@88..89 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateDomainStmt(
                CreateDomainStmt {
                    domainname: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "us_postal_code",
                                    },
                                ),
                            ),
                        },
                    ],
                    type_name: Some(
                        TypeName {
                            names: [
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "text",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            type_oid: 0,
                            setof: false,
                            pct_type: false,
                            typmods: [],
                            typemod: -1,
                            array_bounds: [],
                            location: 32,
                        },
                    ),
                    coll_clause: None,
                    constraints: [
                        Node {
                            node: Some(
                                Constraint(
                                    Constraint {
                                        contype: ConstrCheck,
                                        conname: "",
                                        deferrable: false,
                                        initdeferred: false,
                                        location: 37,
                                        is_no_inherit: false,
                                        raw_expr: Some(
                                            Node {
                                                node: Some(
                                                    BoolExpr(
                                                        BoolExpr {
                                                            xpr: None,
                                                            boolop: OrExpr,
                                                            args: [
                                                                Node {
                                                                    node: Some(
                                                                        AExpr(
                                                                            AExpr {
                                                                                kind: AexprOp,
                                                                                name: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "~",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                lexpr: Some(
                                                                                    Node {
                                                                                        node: Some(
                                                                                            ColumnRef(
                                                                                                ColumnRef {
                                                                                                    fields: [
                                                                                                        Node {
                                                                                                            node: Some(
                                                                                                                String(
                                                                                                                    String {
                                                                                                                        sval: "value",
                                                                                                                    },
                                                                                                                ),
                                                                                                            ),
                                                                                                        },
                                                                                                    ],
                                                                                                    location: 43,
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                                rexpr: Some(
                                                                                    Node {
                                                                                        node: Some(
                                                                                            AConst(
                                                                                                AConst {
                                                                                                    isnull: false,
                                                                                                    location: 51,
                                                                                                    val: Some(
                                                                                                        Sval(
                                                                                                            String {
                                                                                                                sval: "^\\d{5}$",
                                                                                                            },
                                                                                                        ),
                                                                                                    ),
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                                location: 49,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                                Node {
                                                                    node: Some(
                                                                        AExpr(
                                                                            AExpr {
                                                                                kind: AexprOp,
                                                                                name: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "~",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                lexpr: Some(
                                                                                    Node {
                                                                                        node: Some(
                                                                                            ColumnRef(
                                                                                                ColumnRef {
                                                                                                    fields: [
                                                                                                        Node {
                                                                                                            node: Some(
                                                                                                                String(
                                                                                                                    String {
                                                                                                                        sval: "value",
                                                                                                                    },
                                                                                                                ),
                                                                                                            ),
                                                                                                        },
                                                                                                    ],
                                                                                                    location: 64,
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                                rexpr: Some(
                                                                                    Node {
                                                                                        node: Some(
                                                                                            AConst(
                                                                                                AConst {
                                                                                                    isnull: false,
                                                                                                    location: 72,
                                                                                                    val: Some(
                                                                                                        Sval(
                                                                                                            String {
                                                                                                                sval: "^\\d{5}-\\d{4}$",
                                                                                                            },
                                                                                                        ),
                                                                                                    ),
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                                location: 70,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            location: 61,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        cooked_expr: "",
                                        generated_when: "",
                                        nulls_not_distinct: false,
                                        keys: [],
                                        including: [],
                                        exclusions: [],
                                        options: [],
                                        indexname: "",
                                        indexspace: "",
                                        reset_default_tblspc: false,
                                        access_method: "",
                                        where_clause: None,
                                        pktable: None,
                                        fk_attrs: [],
                                        pk_attrs: [],
                                        fk_matchtype: "",
                                        fk_upd_action: "",
                                        fk_del_action: "",
                                        fk_del_set_cols: [],
                                        old_conpfeqop: [],
                                        old_pktable_oid: 0,
                                        skip_validation: false,
                                        initially_valid: true,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..88,
        },
    ],
}
